mobile01 ui test

--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -60,7 +60,7 @@
     <meta property="og:title" content="Vitra | Home">
     <meta property="og:site_name" content="Vitra | Home">
     <!-- 이미지 주소는 절대 주소로 설정 -->
-    <meta property="og:image" content="siteimg.jpg">
+    <meta property="og:image" content="/assets/img/siteimg.jpg">
     <meta property="og:image:width" content="1000">
     <meta property="og:image:height" content="562">
     <!-- 사이트의 지역(html lang="en"과 비슷한 내용) -->
@@ -70,7 +70,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Vitra | Home">
     <meta name="twitter:description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
-    <meta name="twitter:image" content="siteimg.jpg">
+    <meta name="twitter:image" content="/assets/img/siteimg.jpg">
 
     <!-- 파비콘(반응형일 때만 적용) -->
     <link rel="shortcut icon" href="favicon.ico">
@@ -105,7 +105,6 @@
     /* 미디어 쿼리(규칙) - 스타일 태그 내에서 중단점(break point)을 지정해 변경하는 것
     -> 원칙(first mobile - 가장 불규칙한 스마트폰 형태를 먼저 지정) */
     .ui-icon-custom1:after { background-image:url("./menu.png"); background-position: center center; background-size: 95%;}
-    .toggle { display: none; }
     #pay { margin-bottom: 1rem; }
     #pay:nth-child(2) { margin-bottom: 2rem; }
     #pay:last-child { margin-bottom: 0; }
@@ -156,7 +155,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -192,8 +191,8 @@
                         </a>
                     </li>
                     <li class="ui-block-b">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
-                            <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
+                        <a href="#page2" data-icon="tag" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                            <span class="ui-icon ui-icon-tag ui-icon-shadow"></span>
                         </a>
                     </li>
                     <li class="ui-block-c">
@@ -207,8 +206,8 @@
                         </a>
                     </li>
                     <li class="ui-block-e">
-                        <a href="#page55" data-icon="tag" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
-                            <span class="ui-icon ui-icon-tag ui-icon-shadow"></span>
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                            <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
                 </ul>
@@ -243,8 +242,8 @@
                         </a>
                     </li>
                     <li class="ui-block-b">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
-                            <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
+                        <a href="#page2" data-icon="tag" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                            <span class="ui-icon ui-icon-tag ui-icon-shadow"></span>
                         </a>
                     </li>
                     <li class="ui-block-c">
@@ -258,8 +257,8 @@
                         </a>
                     </li>
                     <li class="ui-block-e">
-                        <a href="#page6" data-icon="tag" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
-                            <span class="ui-icon ui-icon-tag ui-icon-shadow"></span>
+                        <a href="#page6" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                            <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
                 </ul>
@@ -291,8 +290,8 @@
                         </a>
                     </li>
                     <li class="ui-block-b">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
-                            <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
+                        <a href="#page2" data-icon="tag" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                            <span class="ui-icon ui-icon-tag ui-icon-shadow"></span>
                         </a>
                     </li>
                     <li class="ui-block-c">
@@ -306,8 +305,8 @@
                         </a>
                     </li>
                     <li class="ui-block-e">
-                        <a href="#page6" data-icon="tag" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
-                            <span class="ui-icon ui-icon-tag ui-icon-shadow"></span>
+                        <a href="#page6" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                            <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
                 </ul>
@@ -339,8 +338,8 @@
                         </a>
                     </li>
                     <li class="ui-block-b">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
-                            <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
+                        <a href="#page2" data-icon="tag" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                            <span class="ui-icon ui-icon-tag ui-icon-shadow"></span>
                         </a>
                     </li>
                     <li class="ui-block-c">
@@ -354,8 +353,8 @@
                         </a>
                     </li>
                     <li class="ui-block-e">
-                        <a href="#page6" data-icon="tag" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
-                            <span class="ui-icon ui-icon-tag ui-icon-shadow"></span>
+                        <a href="#page6" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                            <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
                 </ul>
@@ -392,7 +391,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -475,7 +474,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -515,7 +514,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -555,7 +554,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -599,7 +598,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -642,7 +641,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -685,7 +684,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -730,7 +729,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -768,7 +767,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -806,7 +805,7 @@
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -855,7 +854,7 @@
                             </a>
                         </li>
                         <li class="ui-block-c">
-                            <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                            <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                                 <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                             </a>
                         </li>
@@ -932,7 +931,7 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -942,7 +941,8 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
         <div data-role="content" class="ui-content">
             <h1 class="ui-title">공지사항</h1>
             <div role="main" class="ui-content">
-                <table data-role="table" id="table-column-toggle" data-mode="columntoggle" data-enhanced="true" class="ui-table ui-table-columntoggle" data-column-btn-theme="b">
+                <table data-role="table" id="table-column-toggle" data-mode="columntoggle" data-enhanced="true" 
+                class="ui-table ui-table-columntoggle" data-column-btn-theme="b" data-filter="true" data-filter-placeholder="Search Notice...">
                     <thead>
                         <tr>
                             <th data-priority="2" data-colstart="1" class="ui-table-priority-2 ui-table-cell-visible">번호</th>
@@ -966,7 +966,7 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                 </table>
             </div>
             <div class="ui-btn-group">
-                <a href="#page52"><button class="ui-btn ui-btn-inline">작성</button></a>
+                <a href="#page54"><button class="ui-btn ui-btn-inline">작성</button></a>
             </div>
         </div>
         <footer data-role="footer" class="ui-footer" data-theme="a">
@@ -989,7 +989,7 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -1021,8 +1021,8 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                 </table>
             </div>
             <div class="ui-btn-group">
-                <a href="#page5"><button class="ui-btn ui-btn-inline">삭제</button></a>
-                <a href="#page52"><button class="ui-btn ui-btn-inline">수정</button></a>
+                <a href="#page52"><button class="ui-btn ui-btn-inline">삭제</button></a>
+                <a href="#page54"><button class="ui-btn ui-btn-inline">수정</button></a>
             </div>
         </div>
         <footer data-role="footer" class="ui-footer" data-theme="a">
@@ -1045,7 +1045,7 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
@@ -1069,8 +1069,8 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                 </table>
               </div>
             <div class="ui-btn-group">
-                <a href="#page5"><button class="ui-btn ui-btn-inline">취소</button></a>
-                <a href="#page5"><button class="ui-btn ui-btn-inline ui-btn-b">작성</button></a>
+                <a href="#page52"><button class="ui-btn ui-btn-inline">취소</button></a>
+                <a href="#page52"><button class="ui-btn ui-btn-inline ui-btn-b">작성</button></a>
             </div>
         </div>
         <footer data-role="footer" class="ui-footer" data-theme="a">
@@ -1093,7 +1093,7 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                         </a>
                     </li>
                     <li class="ui-block-c">
-                        <a href="#page2" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
+                        <a href="#page55" data-icon="shop" data-theme="a" class="ui-btn ui-btn-icon-top ui-btn-up-a">
                             <span class="ui-icon ui-icon-shop ui-icon-shadow"></span>
                         </a>
                     </li>
