mobile modify open graph

--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -59,6 +59,7 @@
     <meta property="og:url" content="https://dllgkdud.github.io/mobile01">
     <meta property="og:title" content="Vitra | Home">
     <meta property="og:site_name" content="Vitra | Home">
+    <meta property="og:description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
     <!-- 이미지 주소는 절대 주소로 설정 -->
     <meta property="og:image" content="/assets/img/siteimg.jpg">
     <meta property="og:image:width" content="1000">
@@ -73,10 +74,10 @@
     <meta name="twitter:image" content="/assets/img/siteimg.jpg">
 
     <!-- 파비콘(반응형일 때만 적용) -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/assets/icon/favicon.ico">
     <!-- 기기 별 파비콘 설정 -->
     <!-- APPLE -->
-    <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
+    <link rel="apple-touch-icon-precomposed" href="/assets/icon/favicon-152.png">
 
     <!-- 애플 기기 앱 시작화면 -->
     <link rel="apple-touch-startup-image" href="startup.png">
