mobile01 open graph test

--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -61,7 +61,7 @@
     <meta property="og:site_name" content="Vitra | Home">
     <meta property="og:description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
     <!-- 이미지 주소는 절대 주소로 설정 -->
-    <meta property="og:image" content="/assets/img/siteimg.jpg">
+    <meta property="og:image" content="dllgkdud.github.io/mobile01/assets/img/siteimg.jpg">
     <meta property="og:image:width" content="1000">
     <meta property="og:image:height" content="562">
     <!-- 사이트의 지역(html lang="en"과 비슷한 내용) -->
@@ -531,11 +531,11 @@
                 <p>The Soft Work Table is not just a sofa side table – it is also specifically designed for teamwork. The slender x-shaped base, which is optionally equipped with castors or glides, allows users to sit in varied positions. The top is available in a round or boat-shaped version, at heights of 45 and 71 cm. The table can be integrated in a wide range of Soft Work configurations.</p>
                 <h4>USD 860.00</h4>
             </div>
-            <footer data-role="footer" class="ui-footer" data-theme="a">
-                <h5 class="ui-title" role="heading">COPYRIGHT</h5>
-            </footer>
+            <div class="btn-groups">
+                <a href="#page56" class="ui-btn" data-rel="dialog" data-transition="pop">CONFIGURE</a>
+            </div>
         </div>
-        <footer data-role="footer" class="ui-footer" data-theme="a" data-position="fixed">
+        <footer data-role="footer" class="ui-footer" data-theme="a">
             <h5 class="ui-title" role="heading">COPYRIGHT</h5>
         </footer>
     </div>
@@ -1131,8 +1131,8 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                 <a href="#page0" data-transition="fade" class="ui-btn ui-corner-all ui-shadow">CHECKOUT</button></a>
             </div>
         </div>
-        <footer data-role="footer" class="ui-footer" data-theme="a" data-position="fixed">
-            <h5 class="ui-title" role="heading">COPYRIGHT ©2022 VITRA INTERNATIONAL AG. ALL RIGHTS RESERVED</h5>
+        <footer data-role="footer" class="ui-footer" data-theme="a">
+            <h5 class="ui-title" role="heading">COPYRIGHT</h5>
         </footer>
     </div>
     <!-- 서브메뉴(장바구니) 팝업 -->
