--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -52,33 +52,35 @@
     <meta property="al:android:app_name" content="안드로이드 앱 이름" />
     <meta property="al:android:package" content="안드로이드 패키지 이름" />
     <meta property="al:web:url" content="안드로이드 앱 URL" />-->
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Vitra | Home">
+    <meta name="description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
 
     <!-- 그래픽 특성 별  -->
     <!-- 오픈 그래프 : 공유 전송 시 썸네일로 보여지는 내용 -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://dllgkdud.github.io/mobile01">
+    <meta property="og:url" content="https://dllgkdud.github.io/mobile01/">
     <meta property="og:title" content="Vitra | Home">
     <meta property="og:site_name" content="Vitra | Home">
     <meta property="og:description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
     <!-- 이미지 주소는 절대 주소로 설정 -->
     <meta property="og:image" content="dllgkdud.github.io/mobile01/assets/img/siteimg.jpg">
-    <meta property="og:image:width" content="1000">
-    <meta property="og:image:height" content="562">
     <!-- 사이트의 지역(html lang="en"과 비슷한 내용) -->
     <meta property="og:locale" content="ko_KR">
 
-    <!-- 트위터에 썸네일로 보여지는 내용 -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Vitra | Home">
-    <meta name="twitter:description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
-    <meta name="twitter:image" content="/assets/img/siteimg.jpg">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://dllgkdud.github.io/mobile01/">
+    <meta property="twitter:title" content="Vitra | Home">
+    <meta property="twitter:description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
+    <meta property="twitter:image" content="dllgkdud.github.io/mobile01/assets/img/siteimg.jpg">
 
     <!-- 파비콘(반응형일 때만 적용) -->
-    <link rel="shortcut icon" href="/assets/icon/favicon.ico">
+    <link rel="shortcut icon" href="dllgkdud.github.io/mobile01/assets/icon/favicon.ico">
     <!-- 기기 별 파비콘 설정 -->
     <!-- APPLE -->
-    <link rel="apple-touch-icon-precomposed" href="/assets/icon/favicon-152.png">
-
+    <link rel="apple-touch-icon-precomposed" href="dllgkdud.github.io/mobile01/assets/icon/favicon-152.png">
     <!-- 애플 기기 앱 시작화면 -->
     <link rel="apple-touch-startup-image" href="startup.png">
     <!-- 애플 기기 url / ui 보이게 설정 -->
@@ -87,16 +89,17 @@
     <meta name="apple-mobile-web-app-status-bar-style" href="black-translucent">
 
     <!-- MS(MicroSoft) -->
-    <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="favicon-144.png">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileImage" content="dllgkdud.github.io/mobile01/assets/icon/favicon-144.png">
 
     <!-- 기기 지원 해상도 별 파비콘 설정 -->
-    <link rel="icon" href="/assets/icon/favicon.png">
-    <link rel="icon" href="/assets/icon/favicon-16.png" sizes="16x16">
-    <link rel="icon" href="/assets/icon/favicon-32.png" sizes="32x32">
-    <link rel="icon" href="/assets/icon/favicon-48.png" sizes="48x48">
-    <link rel="icon" href="/assets/icon/favicon-64.png" sizes="64x64">
-    <link rel="icon" href="/assets/icon/favicon-128.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon.png">
+    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-64.png" sizes="64x64">
+    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-128.png" sizes="128x128">
     
     <!-- breakpoint - (min-width:320px && max-width:767px):mobile, (min-width:768px && max-width:959px):tablet, 
     (min-width:960px && max-width:1280px):desktop, (min-width:1281px):HD -->
