--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -94,12 +94,12 @@
     <meta name="msapplication-TileImage" content="dllgkdud.github.io/mobile01/assets/icon/favicon-144.png">
 
     <!-- 기기 지원 해상도 별 파비콘 설정 -->
-    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon.png">
-    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-64.png" sizes="64x64">
-    <link rel="icon" type="image/png" href="dllgkdud.github.io/mobile01/assets/icon/favicon-128.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="/assets/icon/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/icon/favicon-16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/assets/icon/favicon-32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/assets/icon/favicon-48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="/assets/icon/favicon-64.png" sizes="64x64">
+    <link rel="icon" type="image/png" href="/assets/icon/favicon-128.png" sizes="128x128">
     
     <!-- breakpoint - (min-width:320px && max-width:767px):mobile, (min-width:768px && max-width:959px):tablet, 
     (min-width:960px && max-width:1280px):desktop, (min-width:1281px):HD -->
