mobile absolute path

--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -65,7 +65,7 @@
     <meta property="og:site_name" content="Vitra | Home">
     <meta property="og:description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
     <!-- 이미지 주소는 절대 주소로 설정 -->
-    <meta property="og:image" content="dllgkdud.github.io/mobile01/assets/img/siteimg.jpg">
+    <meta property="og:image" content="https://dllgkdud.github.io/mobile01/assets/img/siteimg.jpg">
     <!-- 사이트의 지역(html lang="en"과 비슷한 내용) -->
     <meta property="og:locale" content="ko_KR">
 
@@ -74,13 +74,13 @@
     <meta property="twitter:url" content="https://dllgkdud.github.io/mobile01/">
     <meta property="twitter:title" content="Vitra | Home">
     <meta property="twitter:description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
-    <meta property="twitter:image" content="dllgkdud.github.io/mobile01/assets/img/siteimg.jpg">
+    <meta property="twitter:image" content="https://dllgkdud.github.io/mobile01/assets/img/siteimg.jpg">
 
     <!-- 파비콘(반응형일 때만 적용) -->
-    <link rel="shortcut icon" href="dllgkdud.github.io/mobile01/assets/icon/favicon.ico">
+    <link rel="shortcut icon" href="https://dllgkdud.github.io/mobile01/assets/icon/favicon.ico">
     <!-- 기기 별 파비콘 설정 -->
     <!-- APPLE -->
-    <link rel="apple-touch-icon-precomposed" href="dllgkdud.github.io/mobile01/assets/icon/favicon-152.png">
+    <link rel="apple-touch-icon-precomposed" href="https://dllgkdud.github.io/mobile01/assets/icon/favicon-152.png">
     <!-- 애플 기기 앱 시작화면 -->
     <link rel="apple-touch-startup-image" href="startup.png">
     <!-- 애플 기기 url / ui 보이게 설정 -->
@@ -91,15 +91,15 @@
     <!-- MS(MicroSoft) -->
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <meta name="msapplication-TileImage" content="dllgkdud.github.io/mobile01/assets/icon/favicon-144.png">
+    <meta name="msapplication-TileImage" content="https://dllgkdud.github.io/mobile01/assets/icon/favicon-144.png">
 
     <!-- 기기 지원 해상도 별 파비콘 설정 -->
-    <link rel="icon" type="image/png" href="/assets/icon/favicon.png">
-    <link rel="icon" type="image/png" href="/assets/icon/favicon-16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/assets/icon/favicon-32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/assets/icon/favicon-48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="/assets/icon/favicon-64.png" sizes="64x64">
-    <link rel="icon" type="image/png" href="/assets/icon/favicon-128.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="https://dllgkdud.github.io/mobile01/assets/icon/favicon.png">
+    <link rel="icon" type="image/png" href="https://dllgkdud.github.io/mobile01/assets/icon/favicon-16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="https://dllgkdud.github.io/mobile01/assets/icon/favicon-32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://dllgkdud.github.io/mobile01/assets/icon/favicon-48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="https://dllgkdud.github.io/mobile01/assets/icon/favicon-64.png" sizes="64x64">
+    <link rel="icon" type="image/png" href="https://dllgkdud.github.io/mobile01/assets/icon/favicon-128.png" sizes="128x128">
     
     <!-- breakpoint - (min-width:320px && max-width:767px):mobile, (min-width:768px && max-width:959px):tablet, 
     (min-width:960px && max-width:1280px):desktop, (min-width:1281px):HD -->
@@ -167,7 +167,7 @@
             </nav>
         </header>
         <div class="player">
-            <video class="player_video viewer" src="./vdo/Dancing Wall, Stephan Hürlemann, 2018.mp4" id="target_vdo"></video>
+            <video class="player_video viewer" src="./vdo/2018.mp4" id="target_vdo"></video>
             <button class="player_button toggle" title="Toggle Play">►</button>
         </div>
         <script src="./assets/js/custom_video.js"></script>
@@ -404,7 +404,7 @@
         </header>
         <img src="./assets/img/products-480.jpg">
         <div data-role="content" class="ui-content">
-            <h1 class="ui-title">제품</h1>
+            <h1 class="ui-title">Products</h1>
             <div role="main" class="ui-content">
                 <ul class="ui-grid-a ui-listview ui-corner-all ui-shadow" data-role="listview">
                     <li class="ui-block-a ui-li-has-thumb ui-first-child">
@@ -486,7 +486,7 @@
             </nav>
         </header>
         <div data-role="content" class="ui-content">
-            <h1 class="ui-title">Vitra</h1>
+            <h1 class="ui-title">Seating</h1>
             <div role="main" class="ui-content">
                 <img src="./assets/img/detail-374.jpg" alt="title">
                 <h2>Standard</h2>
@@ -526,7 +526,7 @@
             </nav>
         </header>
         <div data-role="content" class="ui-content">
-            <h1 class="ui-title">Vitra</h1>
+            <h1 class="ui-title">Tables</h1>
             <div role="main" class="ui-content">
                 <img src="./assets/img/detaiil-374.jpg" alt="title">
                 <h2>Soft Work Table</h2>
