mobile validation test

--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -177,7 +177,7 @@
                 <p>To add more comfort and cosiness to your home, explore our product selection to welcome the season in and keep you warm.</p>
             </div>
             <div class="btn-groups">
-                <a href="#page3" data-transition="fade" class="ui-btn ui-corner-all ui-shadow">DISCOVER MORE</button></a>
+                <a href="#page3" data-transition="fade" class="ui-btn ui-corner-all ui-shadow">DISCOVER MORE</a>
             </div>
         </div>
         <footer data-role="footer" class="ui-footer" data-theme="a">
@@ -402,21 +402,21 @@
                 </ul>
             </nav>
         </header>
-        <img src="./assets/img/products-480.jpg">
+        <img src="./assets/img/products-480.jpg" alt="products">
         <div data-role="content" class="ui-content">
             <h1 class="ui-title">Products</h1>
             <div role="main" class="ui-content">
                 <ul class="ui-grid-a ui-listview ui-corner-all ui-shadow" data-role="listview">
                     <li class="ui-block-a ui-li-has-thumb ui-first-child">
                         <a href="#page21" class="ui-btn ui-btn-icon-none">
-                            <img src="./assets/img/chair-179.jpg">
+                            <img src="./assets/img/chair-179.jpg" alt="product1">
                             <h2>Standard</h2>
                             <p>Jean Prouvé</p>
                             <p>USD 1,250.00</p>
                         </a>
                     </li>
                     <li class="ui-block-b ui-li-has-thumb">
-                        <a href="#page22" class="ui-btn ui-btn-icon-none">
+                        <a href="#page22" class="ui-btn ui-btn-icon-none" alt="product2">
                             <img src="./assets/img/table-179.jpg">
                             <h2>Polder Sofa</h2>
                             <p>Hella Jongerius</p>
@@ -424,7 +424,7 @@
                         </a>
                     </li>
                     <li class="ui-block-a ui-li-has-thumb">
-                        <a href="#page21" class="ui-btn ui-btn-icon-none">
+                        <a href="#page21" class="ui-btn ui-btn-icon-none" alt="product3">
                             <img src="./assets/img/chair-179.jpg">
                             <h2>Chaise Tout Bois</h2>
                             <p>Jean Prouvé</p>
@@ -432,7 +432,7 @@
                         </a>
                     </li>
                     <li class="ui-block-b ui-li-has-thumb">
-                        <a href="#page22" class="ui-btn ui-btn-icon-none">
+                        <a href="#page22" class="ui-btn ui-btn-icon-none" alt="product4">
                             <img src="./assets/img/table-179.jpg">
                             <h2>HAL Lounge Chair & Ottoman</h2>
                             <p>Jasper Morrison</p>
@@ -440,7 +440,7 @@
                         </a>
                     </li>
                     <li class="ui-block-a ui-li-has-thumb">
-                        <a href="#page21" class="ui-btn ui-btn-icon-none">
+                        <a href="#page21" class="ui-btn ui-btn-icon-none" alt="product5">
                             <img src="./assets/img/chair-179.jpg">
                             <h2>Grand Relax & Ottoman</h2>
                             <p>Antonio Citterio</p>
@@ -448,7 +448,7 @@
                         </a>
                     </li>
                     <li class="ui-block-b ui-li-has-thumb ui-last-child">
-                        <a href="#page22" class="ui-btn ui-btn-icon-none">
+                        <a href="#page22" class="ui-btn ui-btn-icon-none" alt="product6">
                             <img src="./assets/img/table-179.jpg">
                             <h2>Soft Work Table</h2>
                             <p>Edward Barber & Jay Osgerby</p>
@@ -697,9 +697,8 @@
         </header>
         <img src="./assets/img/magazine-450.jpg" alt="title">
         <div data-role="content" class="ui-content">
-            <h1 class="ui-title"></h1>
+            <h1 class="ui-title">Magazine</h1>
             <div role="main" class="ui-content">
-                <h2>Magazine</h2>
                 <p>The Vitra Magazine features an assortment of articles, images, interviews and anecdotes. It revolves around the themes of design, architecture and culture, our products and their authors, exhibitions and past events – here you can experience the many facets of Project Vitra.</p><br>
                 <h3>Exhibitions</h3>
                 <a href="#page41">                   
@@ -867,7 +866,7 @@
             </nav>
         </header>
         <div data-role="content" class="ui-content">
-            <h1 class="ui-title"></h1>
+            <h1 class="ui-title">회원가입</h1>
             <div role="main" class="ui-content">
                 <form>
                     <ul class="ui-listview ui-listview-inset ui-corner-all ui-shadow" data-inset="true" data-role="listview">
@@ -888,30 +887,30 @@
                         </li>
                         <li class="ui-field-contain ui-li-static ui-body-inherit ui-last-child">
                             <label for="date">Birth</label>
-                            <input type="date" name="date" id="date" placeholder="생일">
+                            <input type="date" name="date" id="date">
                         </li>
                     </ul>
-                </div>
-                <div data-role="container">
-                    <ul class="ui-listview ui-listview-inset ui-corner-all ui-shadow" data-inset="true" data-role="listview">
-                        <li class="ui-field-contain ui-li-static ui-body-inherit ui-first-child">약관동의</li>
-                        <li class="ui-field-contain ui-li-static ui-body-inherit">
-                            <label for="textarea-a">이용약관</label>
-                            <textarea name="textarea" id="textarea-a">
+                    <div data-role="container">
+                        <ul class="ui-listview ui-listview-inset ui-corner-all ui-shadow" data-inset="true" data-role="listview">
+                            <li class="ui-field-contain ui-li-static ui-body-inherit ui-first-child">약관동의</li>
+                            <li class="ui-field-contain ui-li-static ui-body-inherit">
+                                <label for="textarea-a">이용약관</label>
+                                <textarea name="textarea" id="textarea-a">
 I'm a basic textarea. If this is pre-populated with content, the height will be automatically adjusted to fit without needing to scroll. That is a pretty handy usability feature.
-                            </textarea>
-                        </li>
-                        <li class="ui-field-contain ui-li-static ui-body-inherit">
-                            <label for="textarea-a">개인정보처리방침</label>
-                            <textarea name="textarea" id="textarea-a">
+                                </textarea>
+                            </li>
+                            <li class="ui-field-contain ui-li-static ui-body-inherit">
+                                <label for="textarea-a">개인정보처리방침</label>
+                                <textarea name="textarea" id="textarea-a">
 I'm a basic textarea. If this is pre-populated with content, the height will be automatically adjusted to fit without needing to scroll. That is a pretty handy usability feature.
-                            </textarea>
-                        </li>
-                        <li class="ui-btn-group">
-                            <button type="reset" class="ui-btn ui-btn-inline">취소</button>
-                            <button type="submit" class="ui-btn ui-btn-inline ui-btn-b">회원가입</button>
-                        </li>
-                    </ul>
+                                </textarea>
+                            </li>
+                            <li class="ui-btn-group">
+                                <button type="reset" class="ui-btn ui-btn-inline">취소</button>
+                                <button type="submit" class="ui-btn ui-btn-inline ui-btn-b">회원가입</button>
+                            </li>
+                        </ul>
+                    </div>
                 </form>
             </div>
         </div>
@@ -1025,8 +1024,8 @@ I'm a basic textarea. If this is pre-populated with content, the height will be 
                 </table>
             </div>
             <div class="ui-btn-group">
-                <a href="#page52"><button class="ui-btn ui-btn-inline">삭제</button></a>
-                <a href="#page54"><button class="ui-btn ui-btn-inline">수정</button></a>
+                <a href="#page52"><button class="ui-btn ui-btn-inline">삭제</a>
+                <a href="#page54"><button class="ui-btn ui-btn-inline">수정</a>
             </div>
         </div>
         <footer data-role="footer" class="ui-footer" data-theme="a">
