--- a/mobile01/index.html
+++ b/mobile01/index.html
@@ -52,6 +52,7 @@
     <meta property="al:android:app_name" content="안드로이드 앱 이름" />
     <meta property="al:android:package" content="안드로이드 패키지 이름" />
     <meta property="al:web:url" content="안드로이드 앱 URL" />-->
+
     <!-- Primary Meta Tags -->
     <meta name="title" content="Vitra | Home">
     <meta name="description" content="Vitra is a Swiss company dedicated to improving the quality of homes, offices and public spaces through the power of design.">
@@ -107,7 +108,7 @@
     /* 미디어 쿼리(규칙) - 스타일 태그 내에서 중단점(break point)을 지정해 변경하는 것
     -> 원칙(first mobile - 가장 불규칙한 스마트폰 형태를 먼저 지정) */
     .ui-icon-custom1:after { background-image:url("./menu.png"); background-position: center center; background-size: 95%;}
-    .toggle { display: none; }
+    
     #pay { display: block; margin-bottom: 1rem; }
     #pay:nth-child(2) { margin-bottom: 2rem; }
     #pay:last-child { margin-bottom: 0; }
@@ -288,40 +289,40 @@
                         </a>
                     </li>
                     <li class="ui-block-b ui-li-has-thumb">
-                        <a href="#page22" class="ui-btn ui-btn-icon-none" alt="product2">
-                            <img src="./assets/img/table-179.jpg">
+                        <a href="#page22" class="ui-btn ui-btn-icon-none">
+                            <img src="./assets/img/table-179.jpg" alt="product2">
                             <h2>Polder Sofa</h2>
                             <p>Hella Jongerius</p>
                             <p>USD 860.00</p>
                         </a>
                     </li>
                     <li class="ui-block-a ui-li-has-thumb">
-                        <a href="#page21" class="ui-btn ui-btn-icon-none" alt="product3">
-                            <img src="./assets/img/chair-179.jpg">
+                        <a href="#page21" class="ui-btn ui-btn-icon-none">
+                            <img src="./assets/img/chair-179.jpg" alt="product3">
                             <h2>Chaise Tout Bois</h2>
                             <p>Jean Prouvé</p>
                             <p>USD 1,250.00</p>
                         </a>
                     </li>
                     <li class="ui-block-b ui-li-has-thumb">
-                        <a href="#page22" class="ui-btn ui-btn-icon-none" alt="product4">
-                            <img src="./assets/img/table-179.jpg">
+                        <a href="#page22" class="ui-btn ui-btn-icon-none">
+                            <img src="./assets/img/table-179.jpg" alt="product4">
                             <h2>HAL Lounge Chair & Ottoman</h2>
                             <p>Jasper Morrison</p>
                             <p>USD 860.00</p>
                         </a>
                     </li>
                     <li class="ui-block-a ui-li-has-thumb">
-                        <a href="#page21" class="ui-btn ui-btn-icon-none" alt="product5">
-                            <img src="./assets/img/chair-179.jpg">
+                        <a href="#page21" class="ui-btn ui-btn-icon-none">
+                            <img src="./assets/img/chair-179.jpg" alt="product5">
                             <h2>Grand Relax & Ottoman</h2>
                             <p>Antonio Citterio</p>
                             <p>USD 1,250.00</p>
                         </a>
                     </li>
                     <li class="ui-block-b ui-li-has-thumb ui-last-child">
-                        <a href="#page22" class="ui-btn ui-btn-icon-none" alt="product6">
-                            <img src="./assets/img/table-179.jpg">
+                        <a href="#page22" class="ui-btn ui-btn-icon-none">
+                            <img src="./assets/img/table-179.jpg" alt="product6">
                             <h2>Soft Work Table</h2>
                             <p>Edward Barber & Jay Osgerby</p>
                             <p>USD 860.00</p>
